assets/css/app.css
input, textarea {
    width: 100%;
    font-weight: normal;
}

textarea {
    height: 150px;
}

span.language-flag {
    font-size: 34px;
}

img {
    width: 100%;
}

.select-image label > input[type=radio] {
    visibility: hidden;
    position: absolute;
}
.select-image label > input[type=radio] + img{
    cursor:pointer;
    border:2px solid transparent;
}
.select-image label > input[type=radio]:checked + img{
    border:4px solid #64dd17;
}

.select-image label {
    overflow: hidden;
}

